fix inline style in html, favicon on mobile, style button

--- a/styles/style.css
+++ b/styles/style.css
@@ -294,6 +294,11 @@
 
 /* Сердце */
 
+.like-icon {
+  width: 39px; 
+  height: 36px;
+}
+
 .sparks {
   opacity: 0;
 }
@@ -395,11 +400,6 @@
   text-transform: uppercase;
   width: 100%;
   height: 38px;
-}
-
-.dialog__button:focus-visible {
-  outline: none;
-  box-shadow: 2px 2px var(--main-color);
 }
 
 .dialog .floppy {
